--- a/新建文件夹/yhz.html
+++ b/新建文件夹/yhz.html
@@ -17,7 +17,7 @@
                         accent: '#CD5C5C',       // 陶红色
                         light: '#F5F5DC',        // 米白色
                         dark: '#3E2723',         // 深棕色
-                        ceramic: '#A0522D'       // 陶瓷色
+                        ceramic: '#A0522D'       
                     },
                     fontFamily: {
                         song: ['SimSun', 'serif'],
@@ -313,3 +313,4 @@
     <script src="yhz.js"></script>
 </body>
 </html>
+
