--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
--------------------------------------------------------------------------------------------------------------+-<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
@@ -131,5 +131,6 @@
     <script src="home.js"></script>
 </body>
 </html>
+
 
 
