--- a/yun.html
+++ b/yun.html
@@ -126,9 +126,10 @@
 <!-- NAVBAR -->
     
         <!-- 用 iframe 嵌入 Gradio 页面 -->
-        <iframe src="首页、流云\liuyun.html" width="100%" height="900" frameborder="0"></iframe>
+        <iframe src="liuyun.html" width="100%" height="900" frameborder="0"></iframe>
     </section>
     <script src="home.js"></script>
 </body>
 </html>
+
 
