--- a/qian.html
+++ b/qian.html
@@ -127,11 +127,12 @@
 
     
         <!-- 用 iframe 嵌入 Gradio 页面 -->
-        <iframe src="新建文件夹\yhz.html" width="100%" height="900" frameborder="0"></iframe>
+        <iframe src="yhz.html" width="100%" height="900" frameborder="0"></iframe>
     </section>
     <script src="home.js"></script>
 </body>
 </html>
+
 
 
 
