--- a/wo.html
+++ b/wo.html
@@ -126,9 +126,10 @@
 <!-- NAVBAR -->
     
         <!-- 用 iframe 嵌入 Gradio 页面 -->
-        <iframe src="新建文件夹\cp.html" width="100%" height="900" frameborder="0"></iframe>
+        <iframe src="cp.html" width="100%" height="900" frameborder="0"></iframe>
     </section>
     <script src="home.js"></script>
 </body>
 
 </html>
+
