--- a/liuyun.html
+++ b/liuyun.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="heading">
-        <img src="./image/liuyun.jpg" alt="琉璃主题图片，展示精美的琉璃艺术品">
+        <img src="liuyun.jpg" alt="琉璃主题图片，展示精美的琉璃艺术品">
     </div>
 
     <div class="container">
@@ -34,11 +34,11 @@
                     
                     <div class="features-container">
                         <div class="feature-img">
-                            <img src="./image/gongneng1.jpg" alt="琉璃定制设计界面">
+                            <img src="gongneng1.jpg" alt="琉璃定制设计界面">
                             <div class="feature-caption">琉璃定制设计系统</div>
                         </div>
                         <div class="feature-img">
-                            <img src="./image/gongneng2.jpg" alt="琉璃纹样库展示">
+                            <img src="gongneng2.jpg" alt="琉璃纹样库展示">
                             <div class="feature-caption">传统纹样数字库</div>
                         </div>
                     </div>
@@ -50,19 +50,19 @@
             <div class="title">龙门礼·流云道</div>
             <div class="contend3 product-grid">
                 <div class="product-item">
-                    <img src="./image/paibian.jpg" alt="琉璃牌匾，带有传统云纹装饰">
+                    <img src="paibian.jpg" alt="琉璃牌匾，带有传统云纹装饰">
                     <div class="product-name">琉璃牌匾</div>
                 </div>
                 <div class="product-item">
-                    <img src="./image/liulidengzuo.jpg" alt="琉璃双耳瓶，造型典雅">
+                    <img src="liulidengzuo.jpg" alt="琉璃双耳瓶，造型典雅">
                     <div class="product-name">琉璃双耳瓶</div>
                 </div>
                 <div class="product-item">
-                    <img src="./image/chaju.jpg" alt="琉璃茶具套装，晶莹剔透">
+                    <img src="chaju.jpg" alt="琉璃茶具套装，晶莹剔透">
                     <div class="product-name">琉璃茶具</div>
                 </div>
                 <div class="product-item">
-                    <img src="./image/xianglu.jpg" alt="琉璃香炉，纹饰精美">
+                    <img src="xianglu.jpg" alt="琉璃香炉，纹饰精美">
                     <div class="product-name">琉璃香炉</div>
                 </div>
             </div>
@@ -80,4 +80,5 @@
         </div>
     </div>
 </body>
+
 </html>
