--- a/1.html
+++ b/1.html
@@ -816,7 +816,7 @@
                                 <div class="story2_title">河津灰陶琉璃的故事</div>
                                 <div class="story2_desc">采天地之灵气，融古今之技艺，传千年之匠心。</div>
                             </div>
-                            <button class="story2_btn">探索千年技艺→</button>
+                            <button class="story2_btn">探索千年技艺</button>
                         </div>
                     </div>
                 </div>
@@ -858,4 +858,5 @@
     </script>
 </body>
 </html>
+
     
