--- a/1.html
+++ b/1.html
@@ -706,7 +706,7 @@
                 <!-- 轮播图容器 -->
                 <div class="container">
                     <div class="slide">
-                        <div class="item" style="background-image: url('马.jpg');">
+                        <div class="item" style="background-image: url('花瓶3.jpg');">
                             <div class="content">
                                 <div class="name">缠枝莲纹琉璃瓶</div>
                                 <div class="des">传承古法工艺，融合现代审美，每一件作品都独一无二</div>
@@ -714,7 +714,7 @@
                             </div>
                         </div>
                         
-                        <div class="item" style="background-image: url('红图.jpg');">
+                        <div class="item" style="background-image: url('兽.jpg');">
                             <div class="content">
                                 <div class="name">云纹琉璃盏</div>
                                 <div class="des">温润如玉，光彩照人，尽显东方美学精髓</div>
@@ -860,6 +860,7 @@
 </html>
 
     
+
 
 
 
