--- a/yhz.html
+++ b/yhz.html
@@ -88,7 +88,7 @@
                             <div class="p-6 flex items-center justify-between card-hover bg-gradient-to-r from-secondary/5 to-transparent">
                                 <div class="flex items-center space-x-4">
                                     <div class="w-10 h-10 rounded-full bg-accent text-light flex items-center justify-center font-bold text-xl">1</div>
-                                    <img src="图片/唐.png" alt="琉璃工坊的蓝色陶瓷作品" class="w-16 h-16 object-cover rounded-lg shadow-md">
+                                    <img src="唐.png" alt="琉璃工坊的蓝色陶瓷作品" class="w-16 h-16 object-cover rounded-lg shadow-md">
                                     <div>
                                         <h4 class="text-xl font-bold">琉璃工坊·唐</h4>
                                         <div class="flex items-center text-sm text-gray-600">
@@ -107,7 +107,7 @@
                             <div class="p-6 flex items-center justify-between card-hover">
                                 <div class="flex items-center space-x-4">
                                     <div class="w-10 h-10 rounded-full bg-gray-300 text-dark flex items-center justify-center font-bold text-xl">2</div>
-                                    <img src="图片/宋.png" alt="宋瓷研究所的黄色陶瓷作品" class="w-16 h-16 object-cover rounded-lg shadow-md">
+                                    <img src="宋.png" alt="宋瓷研究所的黄色陶瓷作品" class="w-16 h-16 object-cover rounded-lg shadow-md">
                                     <div>
                                         <h4 class="text-xl font-bold">宋瓷研究所</h4>
                                         <div class="flex items-center text-sm text-gray-600">
@@ -126,7 +126,7 @@
                             <div class="p-6 flex items-center justify-between card-hover bg-gradient-to-r from-secondary/5 to-transparent">
                                 <div class="flex items-center space-x-4">
                                     <div class="w-10 h-10 rounded-full bg-amber-600 text-light flex items-center justify-center font-bold text-xl">3</div>
-                                    <img src="图片/元.png" alt="元青花社的蓝色陶瓷作品" class="w-16 h-16 object-cover rounded-lg shadow-md">
+                                    <img src="元.png" alt="元青花社的蓝色陶瓷作品" class="w-16 h-16 object-cover rounded-lg shadow-md">
                                     <div>
                                         <h4 class="text-xl font-bold">元青花社</h4>
                                         <div class="flex items-center text-sm text-gray-600">
@@ -166,7 +166,7 @@
                     <!-- 挑战卡片 -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover border border-secondary/20">
                         <div class="h-[250px] overflow-hidden">
-                            <img src="图片/知识问答1.jpg" alt="陶瓷窑火知识图片" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
+                            <img src="知识问答1.jpg" alt="陶瓷窑火知识图片" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                         </div>
                         <div class="p-6">
                             <div class="flex justify-between items-center mb-4">
@@ -183,7 +183,7 @@
                     <!-- 挑战卡片 -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover border border-secondary/20">
                         <div class="h-[250px] overflow-hidden">
-                            <img src="图片/知识问答2.jpg" alt="历代名窑知识图片" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
+                            <img src="知识问答2.jpg" alt="历代名窑知识图片" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                         </div>
                         <div class="p-6">
                             <div class="flex justify-between items-center mb-4">
@@ -200,7 +200,7 @@
                     <!-- 挑战卡片 -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover border border-secondary/20">
                         <div class="h-[250px] overflow-hidden">
-                            <img src="图片/知识问答3.jpg" alt="陶瓷工艺技术图片" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
+                            <img src="知识问答3.jpg" alt="陶瓷工艺技术图片" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                         </div>
                         <div class="p-6">
                             <div class="flex justify-between items-center mb-4">
@@ -217,7 +217,7 @@
                     <!-- 挑战卡片 -->
                     <div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover border border-secondary/20">
                         <div class="h-[250px] overflow-hidden">
-                            <img src="图片/知识问答4.jpg" alt="陶瓷文化历史图片" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
+                            <img src="知识问答4.jpg" alt="陶瓷文化历史图片" class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                         </div>
                         <div class="p-6">
                             <div class="flex justify-between items-center mb-4">
@@ -240,7 +240,7 @@
                 <div class="max-w-5xl mx-auto">
                     <div class="flex flex-col md:flex-row items-center gap-10">
                         <div class="md:w-2/3">
-                            <video src="图片/介绍.mp4" autoplay muted loop controls alt="陶瓷艺人工作场景" class="rounded-xl shadow-xl w-full h-auto object-cover">
+                            <video src="介绍.mp4" autoplay muted loop controls alt="陶瓷艺人工作场景" class="rounded-xl shadow-xl w-full h-auto object-cover">
                         </div>
                         <div class="md:w-1/3">
                             <h2 class="text-3xl md:text-4xl font-kai font-bold mb-6 text-primary">文化传承记录</h2>
@@ -313,3 +313,4 @@
     <script src="yhz.js"></script>
 </body>
 </html>
+
