--- a/cp.html
+++ b/cp.html
@@ -43,7 +43,7 @@
                 <!-- 头像区域 -->
                 <div class="image-upload-container relative">
                     <div class="w-32 h-32 md:w-40 md:h-40 rounded-full overflow-hidden border-4 border-secondary/30">
-                        <img id="profile-avatar" src="图片/头像.jpg" alt="用户头像" class="w-full h-full object-cover">
+                        <img id="profile-avatar" src="头像.jpg" alt="用户头像" class="w-full h-full object-cover">
                         <div class="image-upload-overlay absolute inset-0 bg-black/50 flex items-center justify-center cursor-pointer">
                             <i class="fa fa-camera text-white text-2xl"></i>
                         </div>
@@ -91,7 +91,7 @@
                     
                     <div class="flex items-center space-x-4 mb-6">
                         <div class="flex -space-x-2">
-                            <img src="图片/头像.jpg" alt="已打卡用户" class="w-10 h-10 rounded-full border-2 border-white">
+                            <img src="头像.jpg" alt="已打卡用户" class="w-10 h-10 rounded-full border-2 border-white">
                             <img src="https://picsum.photos/id/65/100/100" alt="已打卡用户" class="w-10 h-10 rounded-full border-2 border-white">
                             <img src="https://picsum.photos/id/66/100/100" alt="已打卡用户" class="w-10 h-10 rounded-full border-2 border-white">
                             <div class="w-10 h-10 rounded-full bg-primary/10 border-2 border-white flex items-center justify-center text-primary text-xs font-medium">
@@ -107,7 +107,7 @@
                 </div>
                 
                 <div class="w-full md:w-1/2 relative h-64 md:h-80 rounded-lg overflow-hidden shadow-lg">
-                    <img src="图片/底1.jpg" alt="工坊景观" class="w-full h-full object-cover">
+                    <img src="底1.jpg" alt="工坊景观" class="w-full h-full object-cover">
                     <div class="absolute inset-0 bg-gradient-to-t from-black/60 to-transparent flex items-end">
                         <div class="p-4 text-white">
                             <p class="font-medium">龙门琉云坊 - 主展厅</p>
@@ -151,7 +151,7 @@
                 <!-- 藏品1 -->
                 <div class="collection-card-hover bg-light/50 rounded-lg overflow-hidden border border-secondary/20 scale-in">
                     <div class="h-64 overflow-hidden bg-gray-100">
-                        <img src="图片/藏品1.jpg" 
+                        <img src="藏品1.jpg" 
                              alt="珐华绿釉双螭龙簋" 
                              class="w-full h-full object-contain p-4 transition-transform duration-700 hover:scale-110">
                     </div>
@@ -172,7 +172,7 @@
                 <!-- 藏品2 -->
                 <div class="collection-card-hover bg-light/50 rounded-lg overflow-hidden border border-secondary/20 scale-in" style="transition-delay: 0.2s">
                     <div class="h-64 overflow-hidden bg-gray-100">
-                        <img src="图片/藏品2_522.jpg" 
+                        <img src="藏品2_522.jpg" 
                              alt="彩云龙纹兽首三足" 
                              class="w-full h-full object-contain p-4 transition-transform duration-700 hover:scale-110">
                     </div>
@@ -216,7 +216,7 @@
                 <div class="flex flex-col md:flex-row items-center">
                     <div class="flex items-center mb-6 md:mb-0 md:mr-8 scale-in">
                         <div class="w-16 h-16 rounded-full overflow-hidden border-2 border-secondary/30 mr-4">
-                            <img src="图片/头像.jpg" alt="工坊匠人" class="w-full h-full object-cover">
+                            <img src="头像.jpg" alt="工坊匠人" class="w-full h-full object-cover">
                         </div>
                         <div>
                             <h3 class="text-xl font-bold text-primary font-kai">关于我们</h3>
@@ -340,3 +340,4 @@
     <script src="cp.js"></script>
 </body>
 </html>
+
