--- a/1.html
+++ b/1.html
@@ -248,7 +248,7 @@
 
         /* 页面布局样式 */
         main {
-            background-image: url('./image/backgroundimage.jpg');
+            background-image: url('backgroundimage.jpg');
             background-size: cover;
             background-position: center;
             min-height: 100vh;
@@ -860,6 +860,7 @@
 </html>
 
     
+
 
 
 
