--- a/index.html
+++ b/index.html
@@ -126,11 +126,12 @@
 <!-- NAVBAR -->
     
         <!-- 用 iframe 嵌入 Gradio 页面 -->
-        <iframe src="1.html" width="100%" height="100%" frameborder="0"></iframe>
+        <iframe src="1.html" width="100%" height="800px" frameborder="0"></iframe>
     </section>
     <script src="home.js"></script>
 </body>
 </html>
+
 
 
 
